--- a/colorApp/package.json
+++ b/colorApp/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "color": "^3.0.0",
     "react": "16.4.1",
-    "react-native": "0.56.1"
+    "react-native": "0.56.1",
+    "react-navigation": "^2.13.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
