--- a/navigatorApp/package.json
+++ b/navigatorApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "colorApp",
+  "name": "navigatorApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "color": "^3.0.0",
-    "puppeteer": "^1.8.0",
     "react": "16.4.1",
     "react-native": "0.56.1",
     "react-navigation": "^2.13.0"
